Generic code improvements (#6)
* Throw UncheckedIOException instead of generic RuntimeException
* Drop apache commens-io usage as it's not needed to be used.
* Exclude logback classic from libraries. Let the user of this library decide what logging should be included.
* Use try-with-resources to close PdfDocument. Also makes sure it will be closed when an exception is thrown during processing.
* Drop font library.. It's not used by the library itself and therefor should not be included here.
* Added copyright header.